--- a/index.html
+++ b/index.html
@@ -1,7 +1,57 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>Test page</h1>
-        <p>This is a test page!</p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="sytlesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=K2D" rel="sytlesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+    <link type="text/css" rel="stylesheet" href="./styles.css"/>
+
+    <title>Home Page</title>
+
+
+</head>
+<body>
+    <header>
+        <nav>
+            <div>
+                <ul>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">PORFOLIO</a></li>
+                    <li><a href="">ABOUT ME</a></li>
+                    <li class="leftnav"><a href="https://github.com/RobertHalbert">MY GITHUB</a></li>
+                    <li class="leftnav"><a href="">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
+        <h1>WELCOME TO MY PAGE</h1>
+        <img class="bar" src="bar.png" alt="seperator">
+    </header>
+    <main>
+        <div class="row">
+            <div class="col-8" id="paragraphCol">
+                <section class="paragraph">
+                    <p>
+                        Hello, my name is Robert Halbert. I am a junior programmer and student at the IT NSCC campus, currently taking the IT Programming course.
+                    </p>
+                    <p>
+                        I'll probably write more stuff in here when I think about it. Right now I'll put this in to take up some space and make it look more full.
+                    </p>
+                </section>
+            </div>
+            <div class="col-sm" id="catCol">
+                <img class="cat" src="cat.jpg" alt="cat picture">
+            </div>
+        </div>
+    </main>
+</body>
+<footer>
+    <p>
+        Halifax, Nova Scotia <br/>2023
+    </p>
+</footer>
 </html>
