--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top" style="background-image: linear-gradient(white, gray,black);">
@@ -45,6 +46,8 @@
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/RobertHalbert"><i class="fab fa-github"></i></a>
                     </div>
+                    <br/>
+                    <button type="button" class="btn btn-dark">My Resume</button>
                 </div>
             </section>
             <hr class="m-0" />
@@ -109,10 +112,12 @@
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
-                    <h3>Project 1</h3>
-                    <p>This is the First Project</p>
+                    <h3>WPF APPLICATION WITH ENTITY FRAMEWORK AND LINQ</h3>
+                    <p>This project takes information from a database and displays it to the user in a XAML interface. LINQ is also used to allow the user to parse information from the database.</p>
+                    <img/>
                     <h3>Project 2</h3>
                     <p>This is the Second Project</p>
+                    <img/>
                 </div>
             </section>
         </div>
