Resume downlod done

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                         <a class="social-icon" href="https://github.com/RobertHalbert"><i class="fab fa-github"></i></a>
                     </div>
                     <br/>
-                    <button type="button" class="btn btn-dark">My Resume</button>
+                    <a href="Resume.pdf" download="RobertHalbert_Resume">
+                        <button type="button" class="btn btn-dark">My Resume</button>
+                    </a>
                 </div>
             </section>
             <hr class="m-0" />
