--- a/index.html
+++ b/index.html
@@ -116,10 +116,12 @@
                     <h2 class="mb-5">Projects</h2>
                     <h3>WPF APPLICATION WITH ENTITY FRAMEWORK AND LINQ</h3>
                     <p>This project takes information from a database and displays it to the user in a XAML interface. LINQ is also used to allow the user to parse information from the database.</p>
-                    <img/>
-                    <h3>Project 2</h3>
-                    <p>This is the Second Project</p>
-                    <img/>
+                    <img src="assets/img/P1-1.png" class="projectImage"/>
+                    <br/>
+                    <br/>
+                    <h3>Flask APPLICATION WITH AI</h3>
+                    <p>This project uses Python/Flask to interact with an AI that 'looks' at in image and provides a text response.</p>
+                    <img src="assets/img/P2-1.png" class="projectImage"/>
                 </div>
             </section>
         </div>
