--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                 </ul>
@@ -43,27 +43,13 @@
                     </div>
                     <p class="lead mb-5">I am a junior progammer and recent graduate of the NSCC IT Programming course. I have a passion for progamming and I am excited to embark on my career.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/roberthalbert-5a4a7724b"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/RobertHalbert"><i class="fab fa-github"></i></a>
                     </div>
                     <br/>
                     <a href="Resume.pdf" download="RobertHalbert_Resume">
                         <button type="button" class="btn btn-dark">My Resume</button>
                     </a>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <section class="resume-section" id="education">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Nova Scotia Community Collage</h3>
-                            <div class="subheading mb-3">Degree in Programming</div>
-                            <div>IT Programming - NSCC IT Campus</div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2022 - August 2024</span></div>
-                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -100,6 +86,20 @@
                             Time Management
                         </li>
                     </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Nova Scotia Community Collage</h3>
+                            <div class="subheading mb-3">Degree in Programming</div>
+                            <div>IT Programming - NSCC IT Campus</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2022 - August 2024</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
