--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
                         <a class="social-icon" href="https://github.com/RobertHalbert"><i class="fab fa-github"></i></a>
                     </div>
                     <br/>
-                    <a href="Resume.pdf" download="RobertHalbert_Resume">
+                    <a href="Resume.pdf" download="RobertHalbert_Resume" style="margin-right: 20px;">
                         <button type="button" class="btn btn-dark">My Resume</button>
+                    </a>
+                    <a href="CoverLetter.pdf" download="RobertHalbert_CoverLetter">
+                        <button type="button" class="btn btn-dark">My Cover Letter</button>
                     </a>
                 </div>
             </section>
@@ -114,14 +117,34 @@
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
-                    <h3>WPF APPLICATION WITH ENTITY FRAMEWORK AND LINQ</h3>
-                    <p>This project takes information from a database and displays it to the user in a XAML interface. LINQ is also used to allow the user to parse information from the database.</p>
-                    <img src="assets/img/P1-1.png" class="projectImage"/>
+                    <hr/>
+                    <a href="https://github.com/RobertHalbert/WPF_Chinook_Application" style="text-decoration: none;">
+                        <h3>WPF APPLICATION WITH ENTITY FRAMEWORK AND LINQ</h3>
+                        <p>This project takes information from a database using C# and displays it to the user in a XAML interface. LINQ is also used to allow the user to parse information from the database.</p>
+                        <img src="assets/img/P1-1.png" class="projectImage"/>
+                        <p></p>
+                        <p>By working on this project I furthered my understanding of the Visual Studio program as well as how to properly bind data between the XAML and C# programming languages.</p>
+                        <br/>
+                    </a>
                     <br/>
+                    <hr/>
+                    <a href="https://github.com/RobertHalbert/AI_Text_to_Image" style="text-decoration: none;">
+                        <h3>FLASK APPLICATION WITH AI</h3>
+                        <p>This project uses Python/Flask to interact with an AI that 'looks' at in image and provides a text response.</p>
+                        <img src="assets/img/P2-1.png" class="projectImage"/>
+                        <p></p>
+                        <p>Working on this helped me to learn how to use AI and how it could be used to aid those with disabilities, or improve our overall quality of life.</p>
+                        <br/>
+                    </a>
                     <br/>
-                    <h3>Flask APPLICATION WITH AI</h3>
-                    <p>This project uses Python/Flask to interact with an AI that 'looks' at in image and provides a text response.</p>
-                    <img src="assets/img/P2-1.png" class="projectImage"/>
+                    <hr/>
+                    <a href="https://github.com/RobertHalbert/JS_HTML_Bus_Locator" style="text-decoration: none;">
+                        <h3>JAVASCRIPT APPLICATION TO PARSE API DATA</h3>
+                        <p>This project uses Javascript to parse bus data from an api and plot that on a map in an HTML page.</p>
+                        <img src="assets/img/P3-1.png" class="projectImage"/>
+                        <p></p>
+                        <p>Completeing this project gave me the skills to navigate API data and apply it to an application that an ordinary person could easily use.</p>
+                    </a>
                 </div>
             </section>
         </div>
