--- a/index.html
+++ b/index.html
@@ -119,31 +119,37 @@
                     <h2 class="mb-5">Projects</h2>
                     <hr/>
                     <a href="https://github.com/RobertHalbert/WPF_Chinook_Application" style="text-decoration: none;">
-                        <h3>WPF APPLICATION WITH ENTITY FRAMEWORK AND LINQ</h3>
-                        <p>This project takes information from a database using C# and displays it to the user in a XAML interface. LINQ is also used to allow the user to parse information from the database.</p>
-                        <img src="assets/img/P1-1.png" class="projectImage"/>
-                        <p></p>
-                        <p>By working on this project I furthered my understanding of the Visual Studio program as well as how to properly bind data between the XAML and C# programming languages.</p>
-                        <br/>
+                        <div class="projectLink">
+                            <h3>WPF APPLICATION WITH ENTITY FRAMEWORK AND LINQ</h3>
+                            <p>This project takes information from a database using C# and displays it to the user in a XAML interface. LINQ is also used to allow the user to parse information from the database.</p>
+                            <img src="assets/img/P1-1.png" class="projectImage"/>
+                            <p></p>
+                            <p>By working on this project I furthered my understanding of the Visual Studio program as well as how to properly bind data between the XAML and C# programming languages.</p>
+                            <br/>
+                        </div>
                     </a>
                     <br/>
                     <hr/>
-                    <a href="https://github.com/RobertHalbert/AI_Text_to_Image" style="text-decoration: none;">
-                        <h3>FLASK APPLICATION WITH AI</h3>
-                        <p>This project uses Python/Flask to interact with an AI that 'looks' at in image and provides a text response.</p>
-                        <img src="assets/img/P2-1.png" class="projectImage"/>
-                        <p></p>
-                        <p>Working on this helped me to learn how to use AI and how it could be used to aid those with disabilities, or improve our overall quality of life.</p>
-                        <br/>
+                    <a href="https://github.com/RobertHalbert/AI_Text_to_Image"  style="text-decoration: none;">
+                        <div  class="projectLink">
+                            <h3>FLASK APPLICATION WITH AI</h3>
+                            <p>This project uses Python/Flask to interact with an AI that 'looks' at in image and provides a text response.</p>
+                            <img src="assets/img/P2-1.png" class="projectImage"/>
+                            <p></p>
+                            <p>Working on this helped me to learn how to use AI and how it could be used to aid those with disabilities, or improve our overall quality of life.</p>
+                            <br/>
+                        </div>
                     </a>
                     <br/>
                     <hr/>
-                    <a href="https://github.com/RobertHalbert/JS_HTML_Bus_Locator" style="text-decoration: none;">
-                        <h3>JAVASCRIPT APPLICATION TO PARSE API DATA</h3>
-                        <p>This project uses Javascript to parse bus data from an api and plot that on a map in an HTML page.</p>
-                        <img src="assets/img/P3-1.png" class="projectImage"/>
-                        <p></p>
-                        <p>Completeing this project gave me the skills to navigate API data and apply it to an application that an ordinary person could easily use.</p>
+                    <a href="https://github.com/RobertHalbert/JS_HTML_Bus_Locator"  style="text-decoration: none;">
+                        <div class="projectLink">
+                            <h3>JAVASCRIPT APPLICATION TO PARSE API DATA</h3>
+                            <p>This project uses Javascript to parse bus data from an api and plot that on a map in an HTML page.</p>
+                            <img src="assets/img/P3-1.png" class="projectImage"/>
+                            <p></p>
+                            <p>Completeing this project gave me the skills to navigate API data and apply it to an application that an ordinary person could easily use.</p>
+                        </div>  
                     </a>
                 </div>
             </section>
