--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         <a class="social-icon" href="https://github.com/RobertHalbert"><i class="fab fa-github"></i></a>
                     </div>
                     <br/>
-                    <a href="Resume.pdf" download="RobertHalbert_Resume" style="margin-right: 20px;">
+                    <a href="assets/docs/Resume.pdf" download="RobertHalbert_Resume" style="margin-right: 20px;">
                         <button type="button" class="btn btn-dark">My Resume</button>
                     </a>
-                    <a href="CoverLetter.pdf" download="RobertHalbert_CoverLetter">
+                    <a href="assets/docs/CoverLetter.pdf" download="RobertHalbert_CoverLetter">
                         <button type="button" class="btn btn-dark">My Cover Letter</button>
                     </a>
                 </div>
