--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
                         Halifax, Nova Scotia ·
                         <a href="mailto:name@email.com">rad.halbert@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a junior progammer and recent graduate of the NSCC IT Programming course. I have a passion for progamming and I am excited to embark on my career.</p>
-                    <div class="social-icons">
+                    <p class="lead mb-5">
+                        I am a junior progammer and recent graduate of the Nova Sotia Community College IT Programming course. 
+                        I have a passion for progamming and I am excited to embark on my career into the IT industry.
+                        I am eager to make use of my problem-solving skills and my ability to adapt to differnet coding lagnuages to prove myself in the field.
+                        I thank you for taking the time to look over my website and get to know more about me.
+                    </p>                    <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/roberthalbert-5a4a7724b"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/RobertHalbert"><i class="fab fa-github"></i></a>
                     </div>
@@ -87,6 +91,10 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Time Management
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Teamwork             
                         </li>
                     </ul>
                 </div>
