spelling error fixed

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <p>This project uses Javascript to parse bus data from an api and plot that on a map in an HTML page.</p>
                             <img src="assets/img/P3-1.png" class="projectImage"/>
                             <p></p>
-                            <p>Completeing this project gave me the skills to navigate API data and apply it to an application that an ordinary person could easily use.</p>
+                            <p>Completing this project gave me the skills to navigate API data and apply it to an application that an ordinary person could easily use.</p>
                         </div>  
                     </a>
                 </div>
